# Cource_project_hh

./: README.md  pyproject.toml
data/: vacancies.json
src/: connect_api.py  db_connector.py  user_interface.py  vacancy.py
tests/: conftest.py  test_connect_api.py
