[tool.poetry]
name = "course-prjct-hh"
version = "0.1.0"
description = ""
authors = ["Dmitriy Chemakin <dchemakin93@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
